# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: __init__.py  parser.py
gendiff/core/: __init__.py  gendiff.py
gendiff/formatters/: __init__.py  json.py  plain.py
gendiff/scripts/: gendiff.py
hexlet_code/: diff_builder.py  gendiff.py  parser.py
hexlet_code.egg-info/: PKG-INFO
hexlet_code/formatters/: __init__.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_nested.py  test_gendiff_plain.py  utils.py
tests/fixtures/: file1_nested.json  file2.yml  file2_nested.json
