[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.14.1",
]

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_code"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
]

