[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pyyaml>=6.0.3",
    "ruff>=0.14.1",
]
